--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
-h1 {color : red ;}
+#logo{position: relative; top: 20px; left: 50px;}
+#titulo{margin-left: 140px; position: relative; bottom: 70px; font-size: 50px;}
+#descripcion{margin-left: 140px; position: relative; bottom: 80px; font-size: 20px;}
+#noticias{position: fixed; top: 150px; left: 55px; font-size: larger;}
+#fixture{position: fixed; top: 150px;; left: 255px; font-size: larger;}
+#equipos{position: fixed; top: 150px; left: 455px; font-size: larger;}
+#tickets{position: fixed; top: 150px; left: 655px; font-size: larger;}
+#tienda{position: fixed; top: 150px; left: 855px; font-size: larger;}
+#buscador{position: fixed; top: 150px; left: 1055px; font-size: larger;}
+#tw{position: fixed; top: 133px; left: 1400px;}
+.titulonoti{position: relative; top: 200px; left: 75%; font-size: 70px;}
+#img{position: relative; top: 300px; left: 65%;}
+.pie{position: relative; top: 425px; left: 68%; font-size: larger; width: 725px;}
+body{background: yellow;}
+.titu2{position: relative; bottom: 150px; left: 100px;}
+.piesecun{position: relative; bottom: 140px; left: 40px; width: 500px;}
+.img2{position: relative; bottom: 120px; left: 50px;}
+.titu3{position: relative; bottom:  150px; left: 1540px;}
