--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@
 #tienda{position: fixed; top: 150px; left: 855px; font-size: larger;}
 #buscador{position: fixed; top: 150px; left: 1055px; font-size: larger;}
 #tw{position: fixed; top: 133px; left: 1400px;}
-.titulonoti{position: relative; top: 200px; left: 75%; font-size: 70px;}
-#img{position: relative; top: 300px; left: 65%;}
-.pie{position: relative; top: 425px; left: 68%; font-size: larger; width: 725px;}
+.titulonoti{position: relative; top: 50px; left: 65%; font-size: 70px;}
+#img{position: relative; top: 200px; left: 50%;}
+.pie{position: relative; top: 300px; left: 50%; font-size: larger; width: 850px;}
 body{background: yellow;}
-.titu2{position: relative; bottom: 150px; left: 100px;}
-.piesecun{position: relative; bottom: 140px; left: 40px; width: 500px;}
-.img2{position: relative; bottom: 120px; left: 50px;}
-.titu3{position: relative; bottom:  150px; left: 1540px;}
+.titu2{position: relative; bottom: 350px; left: 5%; font-size: 50px;}
+.img2{position: relative; bottom: 330px; left: 0%;}
+.titu3{position: relative; bottom: 300px; left: 10%; font-size: 50px;}
+.img3{position: relative;bottom: 320px;}
+.titu4{position: relative; bottom: 600px; left: 65%; font-size: 70px;}
+.img4{position: relative; bottom: 600px;left: 55%;}
