--- a/style.css
+++ b/style.css
@@ -1,20 +1,109 @@
-#logo{position: relative; top: 20px; left: 50px;}
-#titulo{margin-left: 140px; position: relative; bottom: 70px; font-size: 50px;}
-#descripcion{margin-left: 140px; position: relative; bottom: 80px; font-size: 20px;}
-#noticias{position: fixed; top: 150px; left: 55px; font-size: larger;}
-#fixture{position: fixed; top: 150px;; left: 255px; font-size: larger;}
-#equipos{position: fixed; top: 150px; left: 455px; font-size: larger;}
-#tickets{position: fixed; top: 150px; left: 655px; font-size: larger;}
-#tienda{position: fixed; top: 150px; left: 855px; font-size: larger;}
-#buscador{position: fixed; top: 150px; left: 1055px; font-size: larger;}
-#tw{position: fixed; top: 133px; left: 1400px;}
-.titulonoti{position: relative; top: 50px; left: 65%; font-size: 70px;}
-#img{position: relative; top: 200px; left: 50%;}
-.pie{position: relative; top: 300px; left: 50%; font-size: larger; width: 850px;}
+#logo{
+    position: relative;
+    top: 20px;
+    left: 50px;
+}
+#titulo{
+    margin-left: 140px;
+    position: relative;
+    bottom: 70px;
+    font-size: 50px;
+}
+#descripcion{
+    margin-left: 140px;
+    position: relative;
+    bottom: 80px;
+    font-size: 20px;
+}
+#noticias{
+    position: relative;
+    margin-left: 100px;
+    font-size: larger;
+}
+#fixture{
+    position: relative;
+    margin-left: 100px;
+    font-size: larger;
+}
+#equipos{
+    position: relative;
+    margin-left: 100px;
+    font-size: larger;
+}
+#tickets{
+    position: relative;
+    margin-left: 100px;
+    font-size: larger;
+}
+#tienda{
+    position: relative;
+    margin-left: 100px;
+    font-size: larger;
+}
+#buscador{
+    position: relative;
+    margin-left: 100px;
+    font-size: larger;
+}
+#tw{
+    position: fixed;
+    top: 0;
+    left: 400px;
+}
+.titulonoti{
+    position: relative;
+    top: 50px;
+    left: 65%;
+    font-size: 70px;
+}
+#img{
+    position: relative;
+    top: 200px;
+    left: 50%;
+}
+.pie{
+    position: relative;
+    top: 300px;
+    left: 50%;
+    font-size: larger;
+    width: 850px;
+}
 body{background: yellow;}
-.titu2{position: relative; bottom: 350px; left: 5%; font-size: 50px;}
-.img2{position: relative; bottom: 330px; left: 0%;}
-.titu3{position: relative; bottom: 300px; left: 10%; font-size: 50px;}
-.img3{position: relative;bottom: 320px;}
-.titu4{position: relative; bottom: 600px; left: 65%; font-size: 70px;}
-.img4{position: relative; bottom: 600px;left: 55%;}
+.titu2{
+    position: relative;
+    bottom: 350px;
+    left: 5%;
+    font-size: 50px;
+}
+.img2{
+    position: relative;
+    bottom: 330px;
+    left: 0%;
+}
+.titu3{
+    position: relative;
+    bottom: 300px;
+    left: 10%;
+    font-size: 50px;
+}
+.img3{
+    position: relative;
+    bottom: 320px;
+}
+.titu4{
+    position: relative;
+    bottom: 600px;
+    left: 65%;
+    font-size: 70px;
+}
+.img4{
+    position: relative;
+    bottom: 600px;
+    left: 55%;
+}
+
+.topnav {
+    background-color: white;
+    position: sticky;
+    top: 0
+}
